# oddupiacz

./: .gitignore  README.md  install  justfile  oddupiacz.sh  pyproject.toml  uninstall
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: ci.yml  conventional-commit-pr-name.yml  release.yml  test.yml
configs/: example.yaml  user_config.yaml
oddupiacz/: __init__.py  checker.py  cli_hook.py  cli_setup.py  config.py  config_io.py  config_manager.py  formatters.py  git_utils.py  installer.py  models.py  ui.py
tests/: test_checker.py  test_config.py  test_config_io.py  test_formatters.py  test_git_utils.py  test_installer.py  test_models.py  test_oddupiacz.sh  test_ui.py
